Updated look and feel and submitting data

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,2 @@
+play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' 'unsafe-eval' stackpath.bootstrapcdn.com code.jquery.com cdnjs.cloudflare.com data:"
 play.filters.csrf.cookie.httpOnly = true
