Connecting to API Gateway and UI updates

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,7 @@
 play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' 'unsafe-eval' stackpath.bootstrapcdn.com code.jquery.com cdnjs.cloudflare.com data:"
 play.filters.csrf.cookie.httpOnly = true
+
+api-gateway.url = "http://localhost:9000/audio-files"
+api-gateway.url = ${?API_GATEWAY_URL}
+api-gateway.key = "changeme"
+api-gateway.key = ${?API_GATEWAY_KEY}
