Removed allowed hosts filter

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,8 @@
 play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' 'unsafe-eval' stackpath.bootstrapcdn.com code.jquery.com cdnjs.cloudflare.com data:"
 play.filters.csrf.cookie.httpOnly = true
 
+play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
+
 play.http.secret.key = "abcdefghijklmnopqrstuvwxyz"
 
 api-gateway.url = "/audio-files"
