getting audio files via SQS

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,3 +9,6 @@ api-gateway.url = "/audio-files"
 api-gateway.url = ${?API_GATEWAY_URL}
 api-gateway.key = "changeme"
 api-gateway.key = ${?API_GATEWAY_KEY}
+
+sqs.url = "/queue"
+sqs.url = ${?SQS_URL}
