Making application secret environment driven

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,6 +4,7 @@ play.filters.csrf.cookie.httpOnly = true
 play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
 
 play.http.secret.key = "abcdefghijklmnopqrstuvwxyz"
+play.http.secret.key = ${?PLAY_SECRET}
 
 api-gateway.url = "/audio-files"
 api-gateway.url = ${?API_GATEWAY_URL}
