Preparing for s3 downloads

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,6 +6,14 @@ play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
 play.http.secret.key = "abcdefghijklmnopqrstuvwxyz"
 play.http.secret.key = ${?PLAY_SECRET}
 
+akka.stream.alpakka.s3 {
+  buffer = "memory"
+  aws {
+    credentials.provider = default
+    region.provider = default
+  }
+}
+
 api-gateway.url = "/audio-files"
 api-gateway.url = ${?API_GATEWAY_URL}
 api-gateway.key = "changeme"
@@ -13,3 +21,5 @@ api-gateway.key = ${?API_GATEWAY_KEY}
 
 sqs.url = "/queue"
 sqs.url = ${?SQS_URL}
+
+s3.bucket = "twitch-tts"
