--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,6 +6,8 @@ play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
 play.http.secret.key = "abcdefghijklmnopqrstuvwxyz"
 play.http.secret.key = ${?PLAY_SECRET}
 
+play.i18n.langs = ["en-GB"]
+
 akka.stream.alpakka.s3 {
   buffer = "memory"
   aws {
