Starting Twitch OIDC auth

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -25,3 +25,8 @@ sqs.url = "/queue"
 sqs.url = ${?SQS_URL}
 
 s3.bucket = "twitch-tts"
+
+twitch {
+  client-id = "changeme"
+  client-secret = "changeme"
+}
