Storing session data

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,6 +6,9 @@ play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
 play.http.secret.key = "abcdefghijklmnopqrstuvwxyz"
 play.http.secret.key = ${?PLAY_SECRET}
 
+play.http.session.cookieName = "TTS_SESSION"
+play.http.session.sameSite = "strict"
+
 play.i18n.langs = ["en-GB"]
 
 akka.stream.alpakka.s3 {
